# logger

./: .clang-tidy  .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  logger.hpp  main.cpp  metrics.hpp
.github/workflows/: ci.yml
include/logger/: blocking_queue.hpp  charconv_utils.hpp  error.hpp  expected.hpp  file_sink.hpp  log_level.hpp  log_record.hpp  logger.hpp  record_formatter.hpp  serialization.hpp  sink.hpp  statistics.hpp  udp_sink.hpp
src/: demo_support.cpp  demo_support.hpp  file_sink.cpp  log_level.cpp  logger.cpp  logger_demo.cpp  record_formatter.cpp  serialization.cpp  statistics.cpp  statistics_receiver.cpp  statistics_receiver_state.hpp  udp_logger_demo.cpp  udp_sink.cpp
tests/: expected_tests.cpp  file_sink_tests.cpp  logger_demo_tests.cpp  logger_tests.cpp  queue_tests.cpp  serialization_tests.cpp  statistics_receiver_tests.cpp  statistics_tests.cpp  test_framework.hpp  test_main.cpp  test_utils.hpp  udp_sink_tests.cpp
